# Pokedex

./: CMakeLists.txt  README.md  README.txt
src/: CMakeLists.txt  main.cpp
src/common/: AbilitiesInfo.cpp  AbilitiesInfo.h  BasicInfo.cpp  BasicInfo.h  CMakeLists.txt  EggInfo.cpp  EggInfo.h  SizeInfo.cpp  SizeInfo.h  StatsInfo.cpp  StatsInfo.h  WeaknessInfo.cpp  WeaknessInfo.h
src/database/: CMakeLists.txt
